--- a/Views/Category/AddOrEdit.cshtml
+++ b/Views/Category/AddOrEdit.cshtml
@@ -10,12 +10,12 @@
         <div class="widget p-5">
             <form asp-action="AddOrEdit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" name="CategoryId" value="CategoryId" />
+                <input type="hidden" name="CategoryId" value="@Model.CategoryId" />
                 <div class="form-group">
                     <div class='e-btn-group custom-rbt-group'>
-                        <input type="radio" id="radioleft" name="Type" value="Expense" checked="@(Model.Type==" Expense")" />
+                        <input type="radio" id="radioleft" name="Type" value="Expense"  checked="@(Model.Type =="Expense")" />
                         <label class="e-btn" for="radioleft">Expense</label>
-                        <input type="radio" id="radiomiddle" name="Type" value="Income" checked="@(Model.Type==" Income")" />
+                        <input type="radio" id="radiomiddle" name="Type" value="Income" checked="@(Model.Type ==" Income")" />
                         <label class="e-btn" for="radiomiddle">Income</label>
                     </div>
                     @*<label asp-for="Type" class="control-label"></label>
@@ -23,11 +23,11 @@
                     <span asp-validation-for="Type" class="text-danger"></span>
                 </div>
                 <div class="mb-3">
-                    <ejs-textbox id="title" placeholder="Title" floatLabelType="Always"></ejs-textbox>
+                    <ejs-textbox id="title" placeholder="Title" ejs-for="Title" floatLabelType="Always"></ejs-textbox>
                     <span asp-validation-for="Title" class="text-danger"></span>
                 </div>
                 <div class="mb-3">
-                    <ejs-textbox id="Icon" placeholder="Icon" floatLabelType="Always"></ejs-textbox>
+                    <ejs-textbox id="Icon" placeholder="Icon" ejs-for="Icon" floatLabelType="Always"></ejs-textbox>
                     <span asp-validation-for="Icon" class="text-danger"></span>
                 </div>
 
