--- a/Views/Transaction/AddOrEdit.cshtml
+++ b/Views/Transaction/AddOrEdit.cshtml
@@ -13,7 +13,7 @@
                 <div class="mb-3">
                     <ejs-datepicker id="date" ejs-for="Date"
                                     placeholder="Date" floatLabelType="Always"
-                                    format="MM-dd-yyyy"></ejs-datepicker>
+                                    format="dd-MM-yyyy" ></ejs-datepicker>
                     <span asp-validation-for="Date" class="text-danger"></span>
                 </div>
                 <div class="mb-3">
